

namespace java com.github.geek29.geodethrift.cache

struct Test1 {
	1:i16 shortField,
	2:i32 inteField,
	3:i64 longField,
	4:string stringField,
	5:bool booleanField,
	6:list<string> listField,
	7:map<string,string> mapField
}